--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,8 @@ requirements:
     - dm-tree >=0.1.5
     - jax >=0.1.55
     - jaxlib >=0.1.37
-    - numpy >=1.18.0
+    - numpy >=1.21,<2  # [py>=310 or (osx and arm64)]
+    - numpy >=1.20,<2  # [py<310 and not (osx and arm64)]
     - toolz >=0.9.0
 
 test:
