--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps -vv
-  skip: true   #[py<37]
+  skip: true  # [ppc64le or s390x or win or py<37]
 
 requirements:
   host:
