--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,7 @@ source:
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps -vv
+  # ppc64le, s390x and win are all unsupported by jax/jaxlib
   skip: true  # [ppc64le or s390x or win or py<37]
 
 requirements:
