--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "chex" %}
-{% set version = "0.1.5" %}
+{% set version = "0.1.89" %}
 
 
 package:
@@ -8,13 +8,13 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/chex-{{ version }}.tar.gz
-  sha256: 686858320f8f220c82a6c7eeb54dcdcaa4f3d7f66690dacd13a24baa1ee8299e
+  sha256: 78f856e6a0a8459edfcbb402c2c044d2b8102eac4b633838cbdfdcdb09c6c8e0
 
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps -vv
-  # ppc64le, s390x and win are all unsupported by jax/jaxlib
-  skip: true  # [ppc64le or s390x or win or py<37]
+  # Matches jaxlib-feedstock's compatibility
+  skip: true  # [s390x or py<39]
 
 requirements:
   host:
@@ -26,19 +26,25 @@ requirements:
     - python
     - absl-py >=0.9.0
     - dm-tree >=0.1.5
-    - jax >=0.1.55
-    - jaxlib >=0.1.37
-    - numpy >=1.21,<2  # [py>=310 or (osx and arm64)]
-    - numpy >=1.20,<2  # [py<310 and not (osx and arm64)]
+    - jax >=0.4.27
+    - numpy >=1.24.1
     - toolz >=0.9.0
+    - typing_extensions >=4.2.0
+    - jaxlib >=0.4.27
+    - setuptools  # [py>=312]
 
 test:
   imports:
     - chex
-  commands:
-    - pip check
+  source_files:
+    - chex
   requires:
     - pip
+    - cloudpickle >=3,<3.2
+    - pytest
+  commands:
+    - pip check
+    - cd chex && pytest . -k "not fake_set_n_cpu_devices_test"
 
 about:
   home: https://github.com/deepmind/chex
